# diskclean

./: CLAUDE.md  Cargo.toml  README.md  cleaner.py  profile.sh
benches/: scan_bench.rs  stat_bench.rs  test_bulk.rs
src/: cleanup.rs  cleanup_queue.rs  lib.rs  main.rs  safety_oracle.rs  staging.rs  util.rs
src/model/: category.rs  finding.rs  mod.rs  risk.rs  scan_state.rs
src/scanner/: bulkwalk.rs  classify.rs  mod.rs  walk.rs
src/tui/: app.rs  mod.rs  ui.rs
tools/: apfs_raw_scan  apfs_raw_scan.c
