[package]
name = "diskclean"
version = "0.2.0"
edition = "2021"

[dependencies]
jwalk = "0.8"
rayon = "1.10"
crossbeam-channel = "0.5"
dashmap = "6"
bytesize = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
users = "0.11"
num_cpus = "1"
atty = "0.2"
libc = "0.2"
ratatui = "0.28"
crossterm = "0.28"

[[bench]]
name = "scan_bench"
harness = false

[[bench]]
name = "stat_bench"
harness = false

[[bench]]
name = "test_bulk"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
